--- a/index.html
+++ b/index.html
@@ -45,7 +45,34 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main class='main'>
+      <section class='section beginning'>
+        <h2 class='section__title'>Фритрек и нулевой спринт: Подготовка к работе</h2>
+        <picture class='section__img'>
+          <source srcset='images/bus-375x375.webp' type='image/webp' media='(max-width: 380px)'>
+          <source srcset='images/bus-375x375.jpg' type='image/jpeg' media='(max-width: 380px)'>
+          <source srcset='images/bus-696x696.webp' type='image/webp'>
+          <img src='images/bus-696x696.jpg' alt='автобус' />
+        </picture>
+        <div class='section__context'>
+          <div class='section__context-text'>
+            <p class='section__paragraph'>Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+            <p class='section__paragraph'>Место для ваших воспоминаний о начале обучения.</p>
+          </div>
+          <div class='section__context-buttons'>
+            <span>icon</span>
+            <button>Like</button>
+          </div>
+        </div>
+
+      </section>
+    </main>
+    <footer class='footer'>
+      <button class='footer__btn'>
+        <img class='footer__btn-icon'/>
+        <span class='footer__btn-label'>Сохранить на память</span>
+      </button>
+    </footer>
     <script src="./scripts/set-theme.js"></script>
     <script src="./scripts/like.js"></script>
   </body>
