--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <title>Закрывающий тег</title>
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/favicon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -14,6 +17,7 @@
     <link rel="stylesheet" href="./styles/themes.css" />
   </head>
   <body class="page theme_dark">
+    <div class='background'></div>
     <header class="header">
       <div class='header__logo-group'>
         <h1 class='header__title'>&#60;/HTML&#62;</h1>
@@ -74,7 +78,7 @@
         <svg class='footer__btn-icon' width='28px' height='28px' viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg">
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
-        <p class='footer__btn-label'>Сохранить на память</p>
+        <span class='footer__btn-label'>Сохранить на память</span>
       </button>
     </footer>
     <script src="./scripts/set-theme.js"></script>
