try to fix tests

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="page theme_dark">
     <div class='background'></div>
-    <header class="header">
+    <header class="header block-width">
       <div class='header__logo-group'>
         <h1 class='header__title'>&#60;/HTML&#62;</h1>
         <p class='header__subtitle'>ЗАКРЫВАЮЩИй ТЕГ</p>
@@ -49,7 +49,7 @@
         </ul>
       </nav>
     </header>
-    <main class='main'>
+    <main class='main block-width'>
       <section class='section beginning'>
         <h2 class='section__title'>Фритрек и нулевой спринт: Подготовка к работе</h2>
         <picture class='section__img'>
@@ -64,8 +64,27 @@
             <p class='section__paragraph'>Место для ваших воспоминаний о начале обучения.</p>
           </div>
           <div class='section__context-buttons'>
-            <svg class='section__context-like' width='27px' height='24px' viewBox="0 0 27 24" xmlns="http://www.w3.org/2000/svg">
-              <use href='./svg/heart.svg#heart'></use>
+            <svg class='section__context-like' width="27" height="24" viewBox="0 0 27 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M6 0H3V3H6V0Z" fill="currentColor"/>
+              <path d="M9 0H6V3H9V0Z" fill="currentColor"/>
+              <path d="M3 3H0V6H3V3Z" fill="currentColor"/>
+              <path d="M3 6H0V9H3V6Z" fill="currentColor"/>
+              <path d="M3 9H0V12H3V9Z" fill="currentColor"/>
+              <path d="M12 0H9V3H12V0Z" fill="currentColor"/>
+              <path d="M6 12H3V15H6V12Z" fill="currentColor"/>
+              <path d="M9 15H6V18H9V15Z" fill="currentColor"/>
+              <path d="M12 18H9V21H12V18Z" fill="currentColor"/>
+              <path d="M21 0H24V3H21V0Z" fill="currentColor"/>
+              <path d="M18 0H21V3H18V0Z" fill="currentColor"/>
+              <path d="M24 3H27V6H24V3Z" fill="currentColor"/>
+              <path d="M24 6H27V9H24V6Z" fill="currentColor"/>
+              <path d="M24 9H27V12H24V9Z" fill="currentColor"/>
+              <path d="M15 0H18V3H15V0Z" fill="currentColor"/>
+              <path d="M21 12H24V15H21V12Z" fill="currentColor"/>
+              <path d="M18 15H21V18H18V15Z" fill="currentColor"/>
+              <path d="M15 18H18V21H15V18Z" fill="currentColor"/>
+              <path d="M15 3H12V6H15V3Z" fill="currentColor"/>
+              <path d="M15 21H12V24H15V21Z" fill="currentColor"/>
             </svg>
             <button class='button section__context-btn'>Like</button>
           </div>
@@ -73,7 +92,7 @@
 
       </section>
     </main>
-    <footer class='footer'>
+    <footer class='footer block-width'>
       <button class='button footer__btn'>
         <svg class='footer__btn-icon' width='28px' height='28px' viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg">
           <use href="./svg/floppy.svg#floppy"></use>
