try to fix tests

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <p class='section__paragraph'>Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
             <p class='section__paragraph'>Место для ваших воспоминаний о начале обучения.</p>
           </div>
-          <div class='section__context-buttons'>
-            <svg class='section__context-like' width="27" height="24" viewBox="0 0 27 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <div class='section__context-buttons card__icon-button'>
+            <svg class='section__context-like like-icon' width="27" height="24" viewBox="0 0 27 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M6 0H3V3H6V0Z" fill="currentColor"/>
               <path d="M9 0H6V3H9V0Z" fill="currentColor"/>
               <path d="M3 3H0V6H3V3Z" fill="currentColor"/>
@@ -86,7 +86,7 @@
               <path d="M15 3H12V6H15V3Z" fill="currentColor"/>
               <path d="M15 21H12V24H15V21Z" fill="currentColor"/>
             </svg>
-            <button class='button section__context-btn'>Like</button>
+            <button class='button section__context-btn card__like-button button__text'>Like</button>
           </div>
         </div>
 
